83412224 - Mobile CSS issue - Table Tents / Posters "ad" area on Order screen, 91225172 - during registration on a mobile phone, the terms of service are illegible., 89194260 - text input should recognize numerical/emails and bring up appropriate keyboard on a smartphone.

--- a/app/assets/stylesheets/modules-popovers-edit.css.scss
+++ b/app/assets/stylesheets/modules-popovers-edit.css.scss
@@ -159,6 +159,18 @@
       }
     }
   }
+  
+  
+  #terms-of-service {
+    top: 1em !important;
+    
+    .popup-footer {
+      .cancel {
+        padding: 8px 26px 20px;
+      }
+      .btn--action{font-size:14px;}
+    }
+  }
 }
 
 .popup-header {
